--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "swagger": "node ./swagger.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,6 +16,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "morgan": "~1.9.1",
+    "swagger": "^0.7.5",
+    "swagger-autogen": "^2.5.10",
+    "swagger-ui-express": "^5.0.1",
+    "ui": "^0.2.4",
     "validator": "^13.12.0"
   }
 }
