--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "kill-port 3000 && node ./bin/www",
     "swagger": "node ./swagger.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -16,10 +17,16 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "morgan": "~1.9.1",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
     "swagger": "^0.7.5",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
     "ui": "^0.2.4",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "kill-port": "^2.0.1"
   }
 }
